--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ url = 'https://artefact.skao.int/repository/pypi-internal/simple'
 
 [tool.poetry.dependencies]
 python = "^3.7"
+fastapi = "^0.78.0"
 
 [tool.poetry.dev-dependencies]
 isort = "^5.10.1"
@@ -24,6 +25,7 @@ pylint-junit = "^0.3.2"
 pytest = "^7.1.2"
 pytest-cov = "^3.0.0"
 build = "^0.8.0"
+requests = "^2.28.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
