--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 REACT_APP_SKA_SDP_DATA_PRODUCT_DASHBOARD_URL=http://localhost
 REACT_APP_SKA_SDP_DATA_PRODUCT_DASHBOARD_PORT=8100
 PERSISTANT_STORAGE_PATH=./tests/test_files
+METADATE_FILE_NAME=ska-data-product.yaml
