--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ url = 'https://artefact.skao.int/repository/pypi-internal/simple'
 python = "^3.7"
 fastapi = "^0.78.0"
 uvicorn = "^0.18.2"
+pyyaml = "^6.0"
 
 [tool.poetry.dev-dependencies]
 isort = "^5.10.1"
