--- a/tests/test_files/product/eb_id_2/ska-sub-system/scan_id_2/pb_id_2/ska-data-product.yaml
+++ b/tests/test_files/product/eb_id_2/ska-sub-system/scan_id_2/pb_id_2/ska-data-product.yaml
@@ -2,13 +2,8 @@ interface: http://schema.skao.int/ska-data-product-meta/0.1
  
 execution_block: eb-m001-20191031-12345
  
-# Indicate current status
-# * working = processes still running, files might be missing or incomplete
-# * done = processes finished, files should be complete
-# * failure = not finished sucessfully, files might be incomplete or corrupt
-status: working
  
-context: # Free-form data provided by OET
+context: # Free-form data provided by OET.
   observer: AIV_person_1
   intent: "Experimental run as part of XYZ-123"
   notes: "Running that signal from XX/YY/ZZ through again, things seem a bit flaky"
@@ -22,5 +17,11 @@ config: # Configuration of generating software
   cmdline: -dump /product/eb-m001-20191031-12345/ska-sdp/pb-m001-20191031-12345/vis.ms
  
 files:
-  "vis.ms":
+  - # Path to files. Can be a directory, in which case it applies to all nested files.
+    path: vis.ms
+    # Indicate current file status
+    # * working = processes still running, files might be missing or incomplete
+    # * done = processes finished, files should be complete
+    # * failure = not finished sucessfully, files might be incomplete or corrupt
+    status: working
     description: "Raw visibility dump from receive"
