--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,7 +24,7 @@ black = "^22.6.0"
 flake8 = "^4.0.1"
 pylint = "^2.12.2"
 pylint-junit = "^0.3.2"
-pytest = "^7.1.2"
+pytest = "7.1.2"
 pytest-cov = "^3.0.0"
 build = "^0.8.0"
 requests = "^2.28.1"
