--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,9 @@ python = "^3.7"
 fastapi = "^0.78.0"
 uvicorn = "^0.18.2"
 pyyaml = "^6.0"
+elasticsearch = "^8.6.0"
+elasticsearch-async = "^6.2.0"
+aiohttp = "^3.8.3"
 
 [tool.poetry.dev-dependencies]
 isort = "^5.10.1"
