--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,10 @@ pytest-cov = "^3.0.0"
 build = "^0.8.0"
 requests = "^2.28.1"
 
+[tool.poetry.group.docs.dependencies]
+sphinx = "6.2.1"
+sphinx-rtd-theme = "1.2.2"
+
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
