YAN-1377: Skip metadata files that do not contain the 'execution_block' attribute. Added two more example files with missing attributes.

--- a/tests/test_files/product/eb-none-00000000-00000/ska-data-product.yaml
+++ b/tests/test_files/product/eb-none-00000000-00000/ska-data-product.yaml
@@ -1,16 +1,1 @@
-interface: http://schema.skao.int/ska-data-product-meta/0.1
- 
-context:
-  observer: simulation
-  intent: "Simulation run XYZ-123"
-  notes: "Simulated data"
- 
-config: # Configuration of generating software
-  processing_block: 
-  processing_script: 
-  image:
-  version: 
-  commit:
-  cmdline:
- 
-files: []
+# A completely empty metadata YAML  
