--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 REACT_APP_SKA_SDP_DATA_PRODUCT_DASHBOARD_URL=http://localhost
 REACT_APP_SKA_SDP_DATA_PRODUCT_DASHBOARD_PORT=8100
-PERSISTANT_STORAGE_PATH=./tests/test_files
+PERSISTANT_STORAGE_PATH=./tests/test_files/product
 METADATE_FILE_NAME=ska-data-product.yaml
 METADATA_ES_SCHEMA_FILE=./src/ska_sdp_dataproduct_api/elasticsearch/data_product_metadata_schema.json
 ES_HOST=http://localhost:9200
