--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ elasticsearch = "^8.6.0"
 elasticsearch-async = "^6.2.0"
 aiohttp = "^3.8.3"
 requests = "^2.28.1"
+ska-ser-logging = "^0.4.1"
 
 [tool.poetry.dev-dependencies]
 isort = "^5.10.1"
