--- a/tests/test_files/product/eb-m001-20221212-12345/ska-data-product.yaml
+++ b/tests/test_files/product/eb-m001-20221212-12345/ska-data-product.yaml
@@ -22,6 +22,6 @@ files:
     # Indicate current file status
     # * working = processes still running, files might be missing or incomplete
     # * done = processes finished, files should be complete
-    # * failure = not finished sucessfully, files might be incomplete or corrupt
+    # * failure = not finished successfully, files might be incomplete or corrupt
     status: working
     description: "Raw visibility dump from receive"
