--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ elasticsearch-async = "^6.2.0"
 aiohttp = "^3.8.3"
 requests = "^2.28.1"
 ska-ser-logging = "^0.4.1"
+jsonschema = "^4.18.6"
 
 [tool.poetry.dev-dependencies]
 isort = "^5.10.1"
