YAN-1475: Switched data product subproduct status to 'done' instead of 'finished' to match the spec

--- a/tests/test_files/product/eb-test-20230214-07904/ska-data-product.yaml
+++ b/tests/test_files/product/eb-test-20230214-07904/ska-data-product.yaml
@@ -13,5 +13,5 @@ files:
   status: working
 - description: MS for scan 2
   path: ./output.scan-2.ms
-  status: finished
+  status: done
 interface: http://schema.skao.int/ska-data-product-meta/0.1
