--- a/tests/test_files/product/eb-test-20230401-12345/ska-data-product.yaml
+++ b/tests/test_files/product/eb-test-20230401-12345/ska-data-product.yaml
@@ -16,7 +16,7 @@ files:
   status: working
 - description: MS for scan 2
   path: ./output.scan-2.ms
-  status: finished
+  status: done
 interface: http://schema.skao.int/ska-data-product-meta/0.1
 obscore:
   dataproduct_type: MS
