--- a/tests/test_files/product/eb-m001-20230921-245/ska-data-product.yaml
+++ b/tests/test_files/product/eb-m001-20230921-245/ska-data-product.yaml
@@ -12,14 +12,14 @@ config: # Configuration of generating software
   version: 0.1.3
     
 files:
-  - path: data
+  - path: pst-low/245/data
     status: done
     description: "Channelised voltage data raw files"
-    size: 625025.024
-  - path: weights
+    size: 0
+  - path: pst-low/245/weights
     status: done
     description: "Channelised weights raw files"
-    size: 5310.232
+    size: 0
    
 obscore:
   dataproduct_type: timeseries
