YAN-1475: Added obscore.access_estsize to some data product metadata. Did not add to all, since we should also support the case where the data is missing.

--- a/tests/test_files/product/eb-m004-20191031-12345/ska-data-product.yaml
+++ b/tests/test_files/product/eb-m004-20191031-12345/ska-data-product.yaml
@@ -37,6 +37,7 @@ files:
     status: done
  
 obscore: # ObsCore minimal set
+  access_estsize: 1
   dataproduct_type: MS
   calib_level: raw
   obs_collection: AIV-tests-20191031
