--- a/tests/test_files/product/eb-m001-20230921-245/ska-data-product.yaml
+++ b/tests/test_files/product/eb-m001-20230921-245/ska-data-product.yaml
@@ -1,6 +1,6 @@
 interface: http://schema.skao.int/ska-data-product-meta/0.1
   
-execution_block: eb-m001-20191031-245
+execution_block: eb-m001-20230921-245
   
 context: # Free-form data provided by OET.
   observer: PST_jc
@@ -18,6 +18,9 @@ files:
   - path: pst-low/245/weights
     status: done
     description: "Channelised weights raw files"
+  - path: pst-low/245/observation.log
+    status: done
+    description: "Observation log file"
    
 obscore:
   dataproduct_type: timeseries
