--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,8 +36,8 @@ pytest-cov = "^3.0.0"
 build = "^0.8.0"
 
 [tool.poetry.group.docs.dependencies]
-sphinx = "6.2.1"
-sphinx-rtd-theme = "1.2.2"
+sphinx = "^7.2.6"
+ska-ser-sphinx-theme = "^0.1.2"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
