--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,12 @@ packages = [
 [[tool.poetry.source]]
 name = 'ska-nexus'
 url = 'https://artefact.skao.int/repository/pypi-internal/simple'
+priority = "primary"
+
+[[tool.poetry.source]]
+name = "PyPI"
+priority = "supplemental"
+
 
 [tool.poetry.dependencies]
 python = "^3.10"
