--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,6 +44,8 @@ build = "^0.8.0"
 [tool.poetry.group.docs.dependencies]
 sphinx = "^7.2.6"
 ska-ser-sphinx-theme = "^0.1.2"
+sphinx-copybutton = "^0.5.2"
+sphinx-new-tab-link = "^0.4.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
