--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,6 +3,7 @@ image: $SKA_K8S_TOOLS_DOCKER_BUILDER_IMAGE
 
 variables:
   GIT_SUBMODULE_STRATEGY: recursive
+  OCI_IMAGE_BUILD_CONTEXT: $(PWD)
   CI_POETRY_VERSION: 1.8.2
 
 stages:
