--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,7 @@ ska-ser-logging = "^0.4.1"
 ska-sdp-dataproduct-metadata = "^0.3.0"
 httpx = "^0.25.0"
 psycopg = "^3.2.1"
+psycopg-binary = "^3.2.1"
 
 [tool.poetry.dev-dependencies]
 isort = "^5.10.1"
