--- a/pyproject.toml
+++ b/pyproject.toml
@@ -48,6 +48,10 @@ ska-ser-sphinx-theme = "^0.1.2"
 sphinx-copybutton = "^0.5.2"
 sphinx-new-tab-link = "^0.4.0"
 
+
+[tool.poetry.group.dev.dependencies]
+pytest-mock = "^3.14.0"
+
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
