--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,7 +26,6 @@ pyyaml = "^6.0"
 elasticsearch = "^8.6.0"
 elasticsearch-async = "^6.2.0"
 aiohttp = "^3.8.3"
-requests = "^2.28.1"
 ska-ser-logging = "^0.4.1"
 ska-sdp-dataproduct-metadata = "^0.5.1"
 httpx = "^0.25.0"
@@ -51,6 +50,7 @@ sphinx-new-tab-link = "^0.4.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest-mock = "^3.14.0"
+pytest-asyncio = "^0.23.8"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
