--- a/tests/test_files/product/eb-test-20230401-12345/ska-data-product.yaml
+++ b/tests/test_files/product/eb-test-20230401-12345/ska-data-product.yaml
@@ -25,7 +25,7 @@ interface: http://schema.skao.int/ska-data-product-meta/0.1
 obscore:
   access_estsize: 1
   dataproduct_type: MS
-  calib_level: raw
+  calib_level: 0
   obs_collection: AIV-tests-20230401
   obs_id: pb-test-20230401-12345
   access_url: https://archive.skatelescope.org/pb-test-20230401-12345/retrieve
