--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,11 +1,11 @@
 [tool.poetry]
-name = "ska-sdp-dataproduct-api"
+name = "ska-dataproduct-api"
 version = "0.9.0"
-description = "This repository contain the API that exposes SDP Data Products to the SDP Data Product Dashboard"
+description = "This repository contain the API that exposes SKA Data Products to the SKA Data Product Dashboard"
 authors = ["Andre Odendaal <andre@vivosa.co.za>"]
 license = "BSD-3-Clause"
 packages = [
-    { include = "ska_sdp_dataproduct_api", from = "src" },
+    { include = "ska_dataproduct_api", from = "src" },
 ]
 
 [[tool.poetry.source]]
