--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,6 +46,7 @@ sphinx = "^7.2.6"
 ska-ser-sphinx-theme = "^0.1.2"
 sphinx-copybutton = "^0.5.2"
 sphinx-new-tab-link = "^0.4.0"
+recommonmark = "^0.7.1"
 
 
 [tool.poetry.group.dev.dependencies]
